<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/wallpaper">
    <include layout="@layout/custom_title_child"></include>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" android:layout_marginTop="10dip"
        android:text="@string/btdevexplanation" />

    <TextView
        android:id="@+id/textView_stepOne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" android:textColor="#000000"
        android:text="@string/steponeopenbt" />

    <TextView
        android:id="@+id/textView_stepTwo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" android:textColor="#000000"
        android:text="@string/steptwodiscoverbt" />

    <TextView
        android:id="@+id/textView_setpThree"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" android:textColor="#000000"
        android:text="@string/stepthreeselectbt" />

    <TextView
        android:id="@+id/textView_stepFour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" android:textColor="#000000"
        android:text="@string/stepfourconnectingbt" />

    <TextView
        android:id="@+id/textView_listTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/btdevlisttitle" />

    <ListView android:layout_width="fill_parent" android:id="@+id/bluetooth_listview"
		android:layout_height="wrap_content" android:cacheColorHint="#00000000"
		android:choiceMode="singleChoice" android:divider="#FFCC00">
	</ListView>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:text="@string/cancel" />

</LinearLayout>