<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/wallpaper">

    <include layout="@layout/custom_title_child" >
    </include>

    <EditText
        android:id="@+id/editTxt_devName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:maxLength="8"
        android:hint="@string/edit_dev_name_hint" 
        android:textColor="#000000">

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioBtn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/one_link" 
            android:textColor="#000000"/>

        <RadioButton
            android:id="@+id/radioBtn_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_link" 
            android:textColor="#000000"/>

        <RadioButton
            android:id="@+id/radioBtn_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_link" 
            android:textColor="#000000"/>
    </RadioGroup>

    <Button
        android:id="@+id/ok_btn" android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"  android:onClick="onClickSave"/>

</LinearLayout>